# RoadXML

./: CMakeLists.txt  README.txt
data/: Eight_with_intersection.rnd  big_roundabout.rnd  interchange.rnd  small_roundabout.rnd
data/objects/: big_roundabout.ive  cdlp.ive  clp.ive  eight_with_intersection.ive  interchange.osg  small_roundabout.ive  traffic_light.ive
doc/: RoadXML_FormatSpecification.doc  RoadXML_schema.xsd  RoadXML_schema.xsx
examples/: CMakeLists.txt
examples/TestRoadXML/: CMakeLists.txt  TestRoadXML.cpp
include/RapidXML/1.13/: rapidxml_print.hpp
include/RoadXML/: CountedObject.h  CountedPtr.h  Element.h  Encoding.h  HashVector.h  IDOMElement.h  IDOMParser.h  RoadXML.h  RoadXML3DLayersToExportElement.h  RoadXMLClippedDataElements.h  RoadXMLCurveElements.h  RoadXMLElements.h  RoadXMLFunctionElements.h  RoadXMLGroundElements.h  RoadXMLMaterialElements.h  RoadXMLModifierElement.h  RoadXMLProfileElements.h  RoadXMLRollingSurfacePropsElement.h  RoadXMLSignalElements.h  RoadXMLTags.h  RoadXMLTrackElements.h  RoadXMLTrajectoryElements.h  RoadXMLTrajectoryPartElements.h  RoadXMLVersion.h  RoughnessType.h
include/stk/: Box2.h  Box3.h  Color.h  FileTools.h  InertialMatrix.h  Macro.h  Mark.h  Math.h  Matrix.h  Mecanics.h  PID.h  Quaternion.h  STK.h  STL.h  StringTools.h  Torser.h  Transform.h  Transform2D.h  Unit.h  Vector2.h  Vector3.h
source/: CMakeLists.txt
source/RoadXML/: CMakeLists.txt  CountedObject.cpp  CountedPtr.cpp  DOMTreeErrorReporter.cpp  DOMTreeErrorReporter.h  Element.cpp  Encoding.cpp  RapidXMLDOMElementImpl.cpp  RapidXMLDOMElementImpl.h  RapidXMLDOMParserImpl.cpp  RapidXMLDOMParserImpl.h  RoadXMLClippedDataElements.cpp  RoadXMLCurveElements.cpp  RoadXMLElements.cpp  RoadXMLFunctionElements.cpp  RoadXMLGroundElements.cpp  RoadXMLMaterialElements.cpp  RoadXMLModifierElement.cpp  RoadXMLProfileElements.cpp  RoadXMLRollingSurfacePropsElement.cpp  RoadXMLSignalElements.cpp  RoadXMLTrackElements.cpp  RoadXMLTrajectoryElements.cpp  RoadXMLTrajectoryPartElements.cpp  RoadXMLVersion.cpp  Transcode.cpp  Transcode.h  XercesDOMElementImpl.cpp  XercesDOMElementImpl.h  XercesDOMParserImpl.cpp  XercesDOMParserImpl.h
source/stk/: Box2.cpp  Box3.cpp  CMakeLists.txt  Color.cpp  FileTools.cpp  InertialMatrix.cpp  Mark.cpp  Math.cpp  Matrix.cpp  Mecanics.cpp  PID.cpp  Quaternion.cpp  STL.cpp  StringTools.cpp  Torser.cpp  Transform.cpp  Transform2D.cpp  UNIX_FileTools.cpp  Unit.cpp  Vector2.cpp  Vector3.cpp  WIN_FileTools.cpp
