
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0 FATAL_ERROR)

set (CMAKE_CXX_STANDARD 11)

if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)


IF(WIN32)
	set (ROADXML_VERSION 246)
ELSE(WIN32)
	set (ROADXML_VERSION 2.4.6)
	set (ROADXML_SOVERSION 2.4)
ENDIF(WIN32)

PROJECT(RoadXML)

IF(WIN32)
	IF(MSVC)
		ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
		ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
	ENDIF(MSVC)

	ADD_DEFINITIONS(-DWIN32)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${RAPIDXML_DIR}) 
INCLUDE_DIRECTORIES(${XERCESC_DIR}/include) 
LINK_DIRECTORIES(${XERCESC_DIR}/lib)


INCLUDE_DIRECTORIES(include) 

SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(examples)

IF(WIN32)
	set_target_properties(RoadXML PROPERTIES SUFFIX "${ROADXML_VERSION}.dll")
ELSE(WIN32)
	set_target_properties(RoadXML PROPERTIES VERSION ${ROADXML_VERSION})
	set_target_properties(RoadXML PROPERTIES SOVERSION ${ROADXML_SOVERSION})
ENDIF(WIN32)
